--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "dependencies": {
     "http-server": "^0.9.0",
+    "jspm": "^0.16.48",
     "systemjs": "^0.19.31",
     "typescript": "^1.8.10"
   },
