--- a/package.json
+++ b/package.json
@@ -1,30 +1,29 @@
 {
-  "name": "code",
+  "name": "typy",
   "version": "1.0.0",
-  "description": "",  
-  "dependencies": {
-    "express": "^4.13.3",
+  "description": "",
+  "dependencies": {},
+  "devDependencies": {
     "http-server": "^0.9.0",
+    "typescript": "^2.0.10",
     "jspm": "^0.16.48",
-    "systemjs": "^0.19.31",
-    "typescript": "^1.8.10"
+    "typings": "^2.0.0"
   },
-  "devDependencies": {},
   "scripts": {
-    "install":"jspm",
-    "start": "http-server -p 8080",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "postinstall": "jspm install && typings install",
+    "start": "http-server -p 8080 -o"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "jspm": {
     "dependencies": {
+      "systemjs": "npm:systemjs@^0.19.41",
       "text": "github:systemjs/plugin-text@^0.0.8",
       "twbs/bootstrap": "github:twbs/bootstrap@^3.3.6"
     },
     "devDependencies": {
-      "typescript": "npm:typescript@^1.6.2"
+      "typescript": "npm:typescript@^2.0.10"
     }
   }
 }
