--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "typings": "^2.0.0"
   },
   "scripts": {
-    "postinstall": "jspm install && typings install",
+    "postinstall": "jspm install",
     "start": "http-server -p 8080 -o"
   },
   "keywords": [],
